Added a service page, and an order form.

--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#pablo">
+                        <a href="services.html">
                             Services
                         </a>
                     </li>
