--- a/template.html
+++ b/template.html
@@ -53,7 +53,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#pablo">
+                                    <a href="services.html">
                                         Services
                                     </a>
                                 </li>
@@ -109,7 +109,7 @@
             </div>
 
             <!-- you can use the class main-raised if you want the main area to be as a page with shadows -->
-     <div class="main">
+    <div class="main">
 		<div class="container">
 
 			<!-- here you can add your content -->
@@ -232,7 +232,7 @@
                     </div>
                 </footer>
             
-		</div>
+	</div>
 </div>
 
 </body>
