--- a/pricing.html
+++ b/pricing.html
@@ -52,7 +52,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#pablo">
+                        <a href="services.html">
                             Services
                         </a>
                     </li>
