Minor changes to contact.html and pricing.html

--- a/contact.html
+++ b/contact.html
@@ -157,10 +157,8 @@
     						</div>
     						<div class="description">
     							<h4 class="info-title">Legal Information</h4>
-    							<p> Creative Tim Ltd.<br>
-                                    VAT &middot; EN2341241<br>
-                                    IBAN &middot; EN8732ENGB2300099123<br>
-                                    Bank &middot; Great Britain Bank
+    							<p> Master Academic Writers Ltd.<br>
+                                    
     							</p>
     						</div>
     		        	</div>
